--- a/projets/typographie.html
+++ b/projets/typographie.html
@@ -210,7 +210,7 @@ div.gallery {
             <div class="responsive">
                 <div class="gallery">
                   <a target="_blank"
-                   href="/portfolio/redirect/supersonic.html">
+                   href="/redirect/supersonic.html">
                   
                     <img src="/typographie/supersoso-1.jpg" 
                     alt="supersonic typeface"
