--- a/projets/expe.html
+++ b/projets/expe.html
@@ -206,6 +206,9 @@ div.gallery {
 .bloc3 {
     grid-area: cellule3;
 }
+        bloc3:hover{
+  border:1px solid red;
+}
 
 .bloc4 {
     grid-area: cellule4;
