--- a/projets/code.HTML
+++ b/projets/code.HTML
@@ -239,7 +239,7 @@ div.gallery {
         <p> Premières prises en main de P5js, Processing.
           Le creative Coding est un domaine que je souhaite explorer.
         </p>
-          <p> Le site sur lequel vous naviguer est mon premier projet de développement web, je l'ai imaginé et codé intégralement.</p>
+          <p> Le site sur lequel vous naviguez est mon premier projet de développement web, je l'ai imaginé et codé intégralement.</p>
         </div>
 
         <h4 class="retour"> 
