--- a/index.html
+++ b/index.html
@@ -155,6 +155,22 @@ vidéos
     </span>
     </div>
   </div>
+
+          <div class="page7">
+    <div class="tooltip">
+      <a
+      href="/internetexplorer/index.html"> 
+     o
+    </a> 
+    <span class="tooltiptext">
+      
+      <img class="projet-preview" 
+      src="/reco.png">
+
+page de reco
+    </span>
+    </div>
+  </div>
     </div>
  
 
