--- a/internetexplorer/redirect/podcasts.html
+++ b/internetexplorer/redirect/podcasts.html
@@ -63,6 +63,14 @@
         <p>quelques chaines & vidéos qui sont presques des podcasts.</p>
       
         <div class="wrapper">
+
+                <div class="youtube"> 
+                <a href="https://www.youtube.com/watch?v=egfTYGObAZs">
+                    The honest-to-god truth about traveling 24/8 👁️👁️ (damon domique, je l'adore il est le cliché de l'expat en france mais c'est drole)
+
+                </a>
+            </div>
+            
             <div class="youtube"> 
                 <a href="https://www.youtube.com/watch?v=jcbEiZQ9B7o">
                     our conception of love is messed up.(oliSUNvia)
