--- a/internetexplorer/redirect/podcasts.html
+++ b/internetexplorer/redirect/podcasts.html
@@ -76,6 +76,18 @@
                     our conception of love is messed up.(oliSUNvia)
                 </a>
             </div>
+
+              <div class="youtube"> 
+                <a href="https://www.youtube.com/watch?v=6NOtKSx4ssk&t=5s">
+                    cette vidéo de rénovation qu'il est dangereux de regarder
+                </a>
+            </div>
+
+              <div class="youtube"> 
+                <a href="https://www.youtube.com/@jvscholz">
+                    les vidéos de james qui bizarement sont très apaisantes
+                </a>
+            </div>
             <div class="youtube"> 
                 <a href="https://www.youtube.com/@lesartisansdedemain">
 les artisants de demain            </div>
